<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Privacy Policy"
            android:layout_marginTop="14dp"
            android:textSize="20sp"
            android:gravity="start"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="10dp"/>
        <!-- Content of the Privacy Policy -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FQ"
            android:padding="16dp"
            android:textColor="@color/black"
            android:lineHeight="25dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FQ1"
            android:padding="16dp"
            android:textColor="@color/black"
            android:lineHeight="25dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineHeight="25dp"
            android:text="@string/FQ2"
            android:padding="16dp"
            android:textColor="@color/black"
            />
    </LinearLayout>
</ScrollView>
