<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.add">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="-6dp"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/gambarbis"
                    android:layout_width="138dp"
                    android:layout_height="116dp"
                    android:src="@drawable/bus"
                    android:layout_marginTop="-27dp"
                    android:layout_marginStart="-29dp" />

                <TextView
                    android:id="@+id/TemukanDestinasiLokasiAnda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txtTemukan"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Input for Destination Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_destination_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edt_email"
                android:textColorHint="#d8dcd6"
                android:hint="@string/masukkan_nama_destinasi"
                app:startIconDrawable="@drawable/bus_svgrepo_com_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtlayout_destination_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Input for Destination Address -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_destination_address"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edt_email"
                android:textColorHint="#d8dcd6"
                android:hint="@string/masukkan_alamat_destinasi"
                android:layout_marginBottom="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtlayout_destination_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="@android:color/transparent"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Input for Destination Image URL -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/edt_email"
                android:layout_marginTop="20dp"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/selected_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/imges"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:focusable="true" />

                <Button
                    android:id="@+id/btn_select_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pick Image"
                    android:background="@drawable/shadow"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginStart="76dp"
                    android:layout_marginTop="15dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Submit Button -->
            <Button
                android:id="@+id/btn_submit_suggestion"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/submit_suggestion"
                android:padding="10dp"
                android:background="@drawable/btn_login"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
